--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,33 @@
             "email": "dev.sahilchahal@gmail.com"
         }
     ],
-    "require": {}
+    "require-dev": {
+        "orchestra/testbench": "^7.0",
+        "laravel/pint": "^1.1",
+        "nunomaduro/collision": "^6.2",
+        "nunomaduro/larastan": "^2.0",
+        "pestphp/pest": "^1.21",
+        "pestphp/pest-plugin-laravel": "^1.1",
+        "phpstan/extension-installer": "^1.1",
+        "phpstan/phpstan-deprecation-rules": "^1.0",
+        "phpstan/phpstan-phpunit": "^1.0",
+        "phpunit/phpunit": "^9.5",
+        "spatie/laravel-ray": "^1.26"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "DevChahal\\OnlineUsers\\OnlineUsersServiceProvider"
+            ]
+        }
+    },
+    "require": {
+        "php": "^8.1"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true,
+            "phpstan/extension-installer": true
+        }
+    }
 }
