--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,23 @@
             "DevChahal\\OnlineUsers\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "DevChahal\\OnlineUsers\\Tests\\": "tests"
+        }
+    },
     "authors": [
         {
             "name": "Sahil Chahal",
             "email": "dev.sahilchahal@gmail.com"
         }
     ],
+    "scripts": {
+        "analyse": "vendor/bin/phpstan analyse",
+        "test": "vendor/bin/pest",
+        "test-coverage": "vendor/bin/pest --coverage",
+        "format": "vendor/bin/pint"
+    },
     "require-dev": {
         "orchestra/testbench": "^7.0",
         "laravel/pint": "^1.1",
@@ -38,9 +49,12 @@
         "php": "^8.1"
     },
     "config": {
+        "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
             "phpstan/extension-installer": true
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
